# CleanGraduator

./: .gitignore  CMakeLists.txt  scale1.tbl  scale2.tbl
src/app/: CMakeLists.txt  ControlPanelWidget.cpp  ControlPanelWidget.h  Registry.h  cameragridwidget.cpp  cameragridwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  registries.h  test1.cpp  test2.cpp  test3.cpp
src/app/bootstrap/: AppBootstrap.cpp  AppBootstrap.h  ApplicationBootstrap.cpp  ApplicationBootstrap.h  DIContainer.h  UiBootstrap.cpp  UiBootstrap.h  UseCasesBootstrap.cpp  UseCasesBootstrap.h  ViewModelsBootstrap.cpp  ViewModelsBootstrap.h
src/application/: CMakeLists.txt
src/application/common/: OperationResult.h
src/application/dto/: CameraString.h  DisplacementRecord.h  FrameCrosshair.h  GaugeRecord.h  PrecisionRecord.h  PressureUnitRecord.h  PrinterRecord.h  ResultRecord.h  UserSettings.h
src/application/fmt/: fmt.h  fmt_application.cpp  fmt_application.h
src/application/interactors/: AngleFromVideoInteractor.cpp  AngleFromVideoInteractor.h  PersistentConfigurator.cpp  PersistentConfigurator.h
src/application/model/: DisplacementRecord.h  GaugeRecord.h  PrecisionRecord.h  PressureUnitRecord.h  PrinterRecord.h  ResultRecord.h
src/application/models/: VideoSource.h
src/application/orchestrators/: AngleFromVideoInteractor.cpp  AngleFromVideoInteractor.h  AngleFromVideoInteractorPorts.h  PersistentConfigurator.cpp  PersistentConfigurator.h  VideoSourceManager.cpp  VideoSourceManager.h
src/application/services/: VideoSourceGridService.cpp  VideoSourceGridService.h  VideoSourceGridServiceApplyResult.h  VideoSourceGridServiceResult.h  VideoSourceRepository.cpp  VideoSourceRepository.h
src/application/usecases/: StubUseCase.cpp  StubUseCase.h
src/domain/: CMakeLists.txt
src/domain/events/: Event.h  EventCategory.h  EventType.h  IEventBus.h  IEventListener.h
src/domain/fmt/: FmtLogger.h  Logger.h  fmt.h  fmt_domain.cpp  fmt_domain.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/angle/: AngleSourcePorts.h
src/infrastructure/camera/: CameraConfig.h  CameraPorts.h
src/infrastructure/catalogs/: CatalogPorts.h  FileDisplacementCatalog.cpp  FileDisplacementCatalog.h  FileGaugeCatalog.cpp  FileGaugeCatalog.h  FileGaugePrecisionCatalog.cpp  FileGaugePrecisionCatalog.h  FilePrecisionCatalog.cpp  FilePrecisionCatalog.h  FilePressureUnitCatalog.cpp  FilePressureUnitCatalog.h  FilePrinterCatalog.cpp  FilePrinterCatalog.h
src/infrastructure/clock/: SessionClock.h  UptimeClock.h
src/infrastructure/config/: AppConfig.h
src/infrastructure/configurators/: AnglemeterConfigurator.cpp  AnglemeterConfigurator.h
src/infrastructure/event/: EventBus.cpp  EventBus.h
src/infrastructure/factory/: AngleCalculatorFactory.cpp  AngleCalculatorFactory.h  AngleSourceFactory.cpp  AngleSourceFactory.h  CalibrationCalculatorFactory.cpp  CalibrationCalculatorFactory.h  MotorDriverFactory.cpp  MotorDriverFactory.h  PressureSourceFactory.cpp  PressureSourceFactory.h  VideoSourceFactory.cpp  VideoSourceFactory.h  VideoSourceOverlayFactory.cpp  VideoSourceOverlayFactory.h
src/infrastructure/fmt/: fmt.h  fmt_domain.cpp  fmt_domain.h
src/infrastructure/logging/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  FileLoggingControl.cpp  FileLoggingControl.h  FileLoggingController.cpp  FileLoggingController.h  FmtLogger.h  NamedMultiLogger.cpp  NamedMultiLogger.h
src/infrastructure/motor/: MotorDriverPorts.h
src/infrastructure/overlay/: VideoOverlayPorts.h
src/infrastructure/pressure/: PressureSourceNotifier.cpp  PressureSourceNotifier.h  PressureSourcePorts.h
src/infrastructure/process/: ProcessLifecycle.cpp  ProcessLifecycle.h  ProcessRunner.cpp  ProcessRunner.h  ProcessRunnerPorts.h
src/infrastructure/repo/: VideoSourceRepositoryFromFile.cpp  VideoSourceRepositoryFromFile.h
src/infrastructure/settings/: FileUserSettingsRepository.cpp  FileUserSettingsRepository.h  IGridSettingsRepository.cpp  IGridSettingsRepository.h  QtCameraGridSettingsRepository.cpp  QtCameraGridSettingsRepository.h  QtComponentSettingsRepository.cpp  QtComponentSettingsRepository.h
src/infrastructure/storage/: LogSourcesStorage.cpp  LogSourcesStorage.h  QtInfoSettingsStorage.cpp  QtInfoSettingsStorage.h  QtSettingsStorage.cpp  QtSettingsStorage.h  VideoAngleSourcesStorage.cpp  VideoAngleSourcesStorage.h  VideoSourcesStorage.cpp  VideoSourcesStorage.h
src/infrastructure/system/: QtDesktopServices.cpp  QtDesktopServices.h
src/infrastructure/video/: VideoSourceNotifier.cpp  VideoSourceNotifier.h  VideoSourcePorts.h
src/ui/: CMakeLists.txt  audio.qrc  resources.qrc
src/ui/adapters/: QtVideoSourceAdapter.cpp  QtVideoSourceAdapter.h
src/ui/audio/: IAudioCuePlayer.h  QtCalibrationSoundNotifier.cpp  QtCalibrationSoundNotifier.h  QtToneAudioCuePlayer.cpp  QtToneAudioCuePlayer.h
src/ui/presenters/: VideoStreamPresenter.cpp  VideoStreamPresenter.h
src/ui/views/: QtVideoSourceView.cpp  QtVideoSourceView.h
src/ui/widgets/: QtMainWindow.cpp  QtMainWindow.h
src/viewmodels/: CMakeLists.txt  MainWindowViewModel.cpp  MainWindowViewModel.h  Observable.h  SettingsViewModel.cpp  SettingsViewModel.h  VideoSourceViewModel.cpp  VideoSourceViewModel.h
src/viewmodels/calibration/: CalibrationSeriesViewModel.cpp  CalibrationSeriesViewModel.h
src/viewmodels/component/: ComponentConfigViewModel.cpp  ComponentConfigViewModel.h
src/viewmodels/control/: CalibrationSessionControlViewModel.cpp  CalibrationSessionControlViewModel.h  ControlViewModel.cpp  ControlViewModel.h  DualValveControlViewModel.cpp  DualValveControlViewModel.h  ICalibrationSoundNotifier.h  MotorControlViewModel.cpp  MotorControlViewModel.h
src/viewmodels/logging/: LogViewerViewModel.cpp  LogViewerViewModel.h
src/viewmodels/settings/: CameraGridSettingsViewModel.cpp  CameraGridSettingsViewModel.h  CircleOverlaySettingsViewModel.cpp  CircleOverlaySettingsViewModel.h  InfoSettingsViewModel.cpp  InfoSettingsViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h  VideoSourceGridSettingsViewModel.cpp  VideoSourceGridSettingsViewModel.h
(+603 files in other folders)
